# MLOps-Pipeline-for-Predictive-Maintenance

./: .gitignore  Dockerfile.api  Dockerfile.mlflow  README.md  data-generator.py  docker-compose.yml  env-example.txt  fastapi-service.py  lstm-model.py  makefile.txt  pyproject.toml  requirements.txt
configs/: lstm_config.yaml
monitoring/: prometheus.yml
scripts/: generate_data.py
src/: __init__.py
src/data/: feature_engineering.py
src/inference/: __init__.py  api.py
src/models/: __init__.py  lstm_model.py
src/monitoring/: __init__.py  drift_detection.py
src/training/: __init__.py  train.py
tests/: test_api_integration.py
